--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodemon --watch . index.js"
   },
   "repository": {
     "type": "git",
@@ -24,5 +24,8 @@
   "bugs": {
     "url": "https://github.com/Gongdoribong/rollingpaper/issues"
   },
-  "homepage": "https://github.com/Gongdoribong/rollingpaper#readme"
+  "homepage": "https://github.com/Gongdoribong/rollingpaper#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
